--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/index.css">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    
+    <!-- Discord/Social Media Embeds -->
+    <meta property="og:title" content="TACSIM STUDIOS - Elite LSPDFR Development">
+    <meta property="og:description" content="Elite LSPDFR development team crafting the future of law enforcement simulation. Cutting-edge plugins designed for realism and performance.">
+    <meta property="og:image" content="https://tacsimstudios.xyz/data/pictures/embed-banner.png">
+    <meta property="og:url" content="https://tacsimstudios.xyz">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="TACSIM STUDIOS">
+    <meta name="theme-color" content="#00d4ff">
+    
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="TACSIM STUDIOS - Elite LSPDFR Development">
+    <meta name="twitter:description" content="Elite LSPDFR development team crafting the future of law enforcement simulation.">
+    <meta name="twitter:image" content="https://tacsimstudios.xyz/data/pictures/embed-banner.png">
 
 </head>
 
