--- a/news.html
+++ b/news.html
@@ -9,6 +9,21 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/news.css">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    
+    <!-- Discord/Social Media Embeds -->
+    <meta property="og:title" content="TACSIM STUDIOS - Latest News & Updates">
+    <meta property="og:description" content="Stay updated with the latest developments from TACSIM STUDIOS. Plugin releases, updates, and community news.">
+    <meta property="og:image" content="https://tacsimstudios.xyz/data/pictures/news-banner.png">
+    <meta property="og:url" content="https://tacsimstudios.xyz/news.html">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="TACSIM STUDIOS">
+    <meta name="theme-color" content="#00d4ff">
+    
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="TACSIM STUDIOS - Latest News & Updates">
+    <meta name="twitter:description" content="Stay updated with the latest developments from TACSIM STUDIOS.">
+    <meta name="twitter:image" content="https://tacsimstudios.xyz/data/pictures/news-banner.png">
 
 </head>
 
@@ -25,7 +40,7 @@
     </nav>
 
     <main class="main-content">
-        <h1 class="page-title">LATEST NEWS</h1>
+        <h1 class="page-title gradient-text-animated">LATEST NEWS</h1>
         <p class="page-subtitle">Stay updated with the latest developments from TACSIM STUDIOS</p>
 
         <section class="featured-news" id="featured-news"></section>
