--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     </nav>
 
     <main class="main-content">
-        <h1 class="page-title">ABOUT TACSIM</h1>
+        <h1 class="page-title gradient-text-animated">ABOUT TACSIM</h1>
         <p class="page-subtitle">Meet the team behind the most immersive LSPDFR experiences</p>
 
         <!-- Hero Section -->
