--- a/admin.html
+++ b/admin.html
@@ -21,10 +21,13 @@
         </ul>
     </nav>
     <div class="admin-login" id="admin-login">
-        <h2>Admin Login</h2>
-        <div class="error" id="login-error"></div>
-        <input type="password" id="admin-password" placeholder="Enter admin password" autocomplete="current-password">
-        <button id="login-btn">Login</button>
+        <h2>Admin Panel</h2>
+        <div class="out-of-order-message">
+            <div class="maintenance-icon">🔧</div>
+            <h3>Temporarily Out of Order</h3>
+            <p>The admin panel is currently undergoing maintenance and updates. Please check back later.</p>
+            <p class="status-note">We're working on improving the system to serve you better!</p>
+        </div>
     </div>
     <div class="admin-app hidden" id="admin-panel">
         <aside class="admin-sidebar">
