--- a/plugins.html
+++ b/plugins.html
@@ -6,9 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>TACSIM STUDIOS - Plugins</title>
     <link rel="icon" type="image/x-icon" href="data/pictures/favicon.png">
-   <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/plugins.css">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
+    <!-- Discord/Social Media Embeds -->
+    <meta property="og:title" content="TACSIM STUDIOS - Professional LSPDFR Plugins">
+    <meta property="og:description"
+        content="Professional-grade LSPDFR modifications crafted for ultimate realism. Explore our collection of callouts, scripts, and enhancement plugins.">
+    <meta property="og:image" content="https://tacsimstudios.xyz/data/pictures/plugins-banner.png">
+    <meta property="og:url" content="https://tacsimstudios.xyz/plugins.html">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="TACSIM STUDIOS">
+    <meta name="theme-color" content="#00d4ff">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="TACSIM STUDIOS - Professional LSPDFR Plugins">
+    <meta name="twitter:description" content="Professional-grade LSPDFR modifications crafted for ultimate realism.">
+    <meta name="twitter:image" content="https://tacsimstudios.xyz/data/pictures/plugins-banner.png">
 
 </head>
 
@@ -25,7 +41,7 @@
     </nav>
 
     <main class="main-content">
-        <h1 class="page-title">TACSIM PLUGINS</h1>
+        <h1 class="page-title gradient-text-animated">TACSIM PLUGINS</h1>
         <p class="page-subtitle">Professional-grade LSPDFR modifications crafted for ultimate realism</p>
 
         <div class="filter-tabs">
