--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:url" content="https://tacsimstudios.xyz">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="TACSIM STUDIOS">
-    <meta name="theme-color" content="#00d4ff">
+    <meta name="theme-color" content="#1a1a2e">
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
