--- a/terms.html
+++ b/terms.html
@@ -34,7 +34,7 @@
         <h2>1. INTRODUCTION</h2>
         <p>This License Agreement ("Agreement") is a legally binding contract between you (the "User") and the original
             developers, maminka1948 and Dr. Mamba (collectively, the "Developers"). By downloading, installing,
-            accessing, or using the callout software and associated files (the "Software"), you acknowledge that you
+            accessing, or using the software and associated files (the "Software"), you acknowledge that you
             have read, understood, and agree to be bound by the terms of this Agreement.</p>
 
         <h2>2. LICENSE GRANT AND RESTRICTIONS</h2>
