--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@ I’ve loved GTA V since the day it dropped, and LSPDFR completely changed the g
                         <div class="team-photo-placeholder">✈️</div>    
                     </div>
                     <div class="team-name">Maminka</div>
-                    <div class="team-role">Developer</div>
+                    <div class="team-role">Co-Owner & Developer</div>
                     <div class="team-bio">
                        Heya! I’m Maminka, one of the developers at TACSIM Studios. My journey here kicked off with a simple “sure,” and it’s grown into one of the most rewarding experiences I’ve had. I’ve had the chance to be involved in just about everything from core development to experimental features.
 Working with such a dedicated and creative team has been nothing short of inspiring, and I’m excited for everything we’re building both now and in the future. There’s a lot more to come, and I’m all in.
@@ -115,3 +115,4 @@ I’m all about building immersive experiences and making sure everything feels 
 </body>
 
 </html>
+
