Change homepage branding to GOONING INDUSTRIES
Updated the homepage content and branding from TACSIM STUDIOS to GOONING INDUSTRIES, along with associated metadata and features.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TACSIM STUDIOS - Home</title>
+    <title>GOONING INDUSTRIES - Home</title>
     <link rel="icon" type="image/x-icon" href="data/pictures/favicon.png">
     
     <link rel="preload" href="css/main.css" as="style">
@@ -43,9 +43,9 @@
 
     <section class="hero">
         <div class="hero-content">
-            <h1>TACSIM STUDIOS</h1>
-            <p>Elite LSPDFR development team crafting the future of law enforcement simulation</p>
-            <a href="plugins.html" class="cta-button">EXPLORE PLUGINS</a>
+            <h1>GOONING INDUSTRIES</h1>
+            <p>Elite Gooning team crafting the future of Goon.</p>
+            <a href="plugins.html" class="cta-button">EXPLORE OUR GOON</a>
         </div>
     </section>
 
@@ -55,19 +55,19 @@
             <div class="feature-card animate-on-scroll">
                 <div class="feature-icon">🚔</div>
                 <h3>Elite Plugins</h3>
-                <p>Cutting-edge LSPDFR plugins designed for realism and performance. Every line of code crafted with
+                <p>Cutting-edge Goon designed for realism and performance. Every line of Goon crafted with
                     precision.</p>
             </div>
 
             <div class="feature-card animate-on-scroll">
                 <div class="feature-icon">🔧</div>
                 <h3>Continuous Updates</h3>
-                <p>Regular updates, bug fixes, and new features. We're committed to long-term support.</p>
+                <p>Regular Goon, Goon fixes, and new Goon We're committed to long Gooning sessions.</p>
             </div>
             <div class="feature-card animate-on-scroll">
                 <div class="feature-icon">🎮</div>
                 <h3>Community Driven</h3>
-                <p>Built by the community, for the community. Your feedback shapes our development.</p>
+                <p>Built by the Gooning community, for the Gooning community. Your feedback Goons our development.</p>
             </div>
 
         </div>
@@ -121,5 +121,6 @@
     </script>
     <script src="scripts/performance.js" defer></script>
 </body>
+
 
 </html>
