Revise index.html with new content and layout
Updated content and structure of the index.html file.

--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@
         <h2 class="section-title animate-on-scroll">What We Deliver</h2>
         <div class="features-grid">
             <div class="feature-card animate-on-scroll">
-                <div class="feature-icon">🚔</div>
-                <h3>Elite Plugins</h3>
+                <div class="feature-icon">💦</div>
+                <h3>Elite Goon</h3>
                 <p>Cutting-edge Goon designed for realism and performance. Every line of Goon crafted with
                     precision.</p>
             </div>
 
             <div class="feature-card animate-on-scroll">
                 <div class="feature-icon">🔧</div>
-                <h3>Continuous Updates</h3>
+                <h3>Continuous Gooning sessions</h3>
                 <p>Regular Goon, Goon fixes, and new Goon We're committed to long Gooning sessions.</p>
             </div>
             <div class="feature-card animate-on-scroll">
                 <div class="feature-icon">🎮</div>
-                <h3>Community Driven</h3>
+                <h3>Community Gooning</h3>
                 <p>Built by the Gooning community, for the Gooning community. Your feedback Goons our development.</p>
             </div>
 
@@ -124,3 +124,4 @@
 
 
 </html>
+
